--- a/frontEnd/frontend-reactjs-typescript/src/index.css
+++ b/frontEnd/frontend-reactjs-typescript/src/index.css
@@ -4,12 +4,15 @@
 
 body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */font-family: 'Montserrat', sans-serif;
+    sans-serif;
+    /* font-family: 'Montserrat', sans-serif;
 font-family: 'Nunito', sans-serif;
 font-family: 'Nunito Sans', sans-serif;
-font-family: 'Open Sans', sans-serif;
+font-family: 'Open Sans', sans-serif; */
+
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
