Continue project phase 2

--- a/frontEnd/frontend-reactjs-typescript/src/pages/page.css
+++ b/frontEnd/frontend-reactjs-typescript/src/pages/page.css
@@ -3,5 +3,5 @@
     width: 100%;
     background-size: cover; /* hoặc contain hoặc kích thước tùy chọn khác */
     background-repeat: no-repeat;
-    background-image: url('https://feeldecor.com.vn/wp-content/uploads/2019/12/9-Xu-h%C6%B0%E1%BB%9Bng-n%E1%BB%99i-th%E1%BA%A5t-ph%C3%B2ng-l%C3%A0m-vi%E1%BB%87c-%C4%91%E1%BA%B9p-tr%C3%A0n-%C4%91%E1%BA%A7y-c%E1%BA%A3m-h%E1%BB%A9ng-53-1.jpg');
+    background-image: url('https://png.pngtree.com/background/20211216/original/pngtree-office-learning-design-desktop-environment-posing-photography-map-with-map-picture-image_1520972.jpg');
 }
